<resources>
    <string name="app_name">lab3_3</string>

    <string name="font_size">字体大小</string>
    <string name="font_10">10号字体</string>
    <string name="font_16">16号字体</string>
    <string name="font_20">20号字体</string>

    <string name="plain_item">普通菜单项</string>

    <string name="font_color">字体颜色</string>
    <string name="font_red">红色字体</string>
    <string name="font_black">黑色字体</string>
</resources>