<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!--  字体大小。好像在这定义不了headtitle？默认用了title的。  -->
    <item android:title="@string/font_size"
        android:icon="@drawable/font">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/font_10"
                    android:title="@string/font_10" />
                <item
                    android:id="@+id/font_16"
                    android:title="@string/font_16" />
                <item
                    android:id="@+id/font_20"
                    android:title="@string/font_20" />
            </group>
        </menu>
    </item>
    <!--  普通菜单项  -->
    <item android:id="@+id/plain_item"
        android:title="@string/plain_item">
    </item>
    <!--  字体颜色  -->
    <item android:title="@string/font_color">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/font_red"
                    android:title="@string/font_red" />
                <item android:id="@+id/font_black"
                    android:title="@string/font_black" />
            </group>
        </menu>
    </item>
</menu>